[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neo4j-viz"
version = "0.1.0"
description = "A simple graph visualization tool"
readme = "README.md"
authors = [{ name = "Neo4j", email = "team-gds@neo4j.org" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database :: Front-Ends",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development",
    "Typing :: Typed",
]
keywords = ["graph", "visualization", "neo4j"]
dependencies = ["ipython >=8, <9", "pydantic >=2 , <3", "pydantic-extra-types >=2, <3"]
requires-python = ">=3.9"


[project.optional-dependencies]
dev = ["ruff==0.8.2", "mypy==1.13.0", "pytest==8.3.3", "selenium==4.27.1", "palettable==3.3.0", "pytest-mock==3.14.0"]
pandas = ["pandas>=2, <3", "pandas-stubs>=2, <3"]
graphdatascience = ["graphdatascience>=1, <2"]
notebook = [
    "ipykernel==6.29.5",
    "pykernel==0.1.6",
    "neo4j>=5.26.0",
    "ipywidgets>=8.0.0",
    "palettable==3.3.0",
]

[project.urls]
Homepage = "https://neo4j.com/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"] # list of folders that contain the packages (["."] by default)
include = [
    "neo4j_viz*",
] # package names should match these glob patterns (["*"] by default)
namespaces = false # only scan directories with __init__.py files (true by default)

[tool.setuptools.package-data]
neo4j_viz = ["resources/nvl_entrypoint/base.js", "py.typed"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.ruff]
line-length = 120
include = ["*.py", "*.ipynb"]

exclude = [
    # default

    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",

    # custom
    "venv*",
    ".venv*",
    ".tox",
    "build",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9", # default pycodestyle rules
    "F",  # flake8
    "I",  # isort
]

[tool.mypy]
strict = true
exclude = '(^build|^\.?venv)'
plugins = ['pydantic.mypy']