# pyproject.toml
[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx_neo4j"
version = "0.1.0"

dependencies = ["sphinx"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
sphinx_neo4j = [
    "static/css/*.css",
    "static/js/*.js",
    "static/img/*.svg",
    "*.svg",
    "*.html",
    "theme.toml",
]


[project.entry-points."sphinx.html_themes"]
name_of_theme = "sphinx_neo4j"
